objects/Session__c.object
<CustomObject>
    <fields>
        <fullName>A_V_Form__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Has A/V form been received?</inlineHelpText>
        <label>A/V Form</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>All_Speakers_Identified__c</fullName>
        <label>All Speakers Identified?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Attendance__c</fullName>
        <label>Attendance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Audio_URL__c</fullName>
        <label>Audio URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Audio_Visual_Requirements__c</fullName>
        <label>Audio/Visual Requirements</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Level__c</fullName>
        <label>Level</label>
        <picklist>
            <picklistValues>
                <fullName>Beginner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Intermediate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advanced</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>All</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Link_to_Event__c</fullName>
        <formula>HYPERLINK(&quot;./&quot; &amp;  Track__r.Event__r.Id  ,  Track__r.Event__r.Name , &quot;_parent&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Link to Event</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Publish_to_Web__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field can be used for web integrations if you wish to publish data in Salesforce to your website.</description>
        <label>Publish to Web?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Room_Setup__c</fullName>
        <label>Room Setup</label>
        <picklist>
            <picklistValues>
                <fullName>Classroom</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hands-on training</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rounds</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Theater</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Crescents</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reception</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Room__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Room</label>
        <referenceTo>Room__c</referenceTo>
        <relationshipLabel>Sessions</relationshipLabel>
        <relationshipName>Sessions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Session_Abstract__c</fullName>
        <label>Session Abstract</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Session_Code__c</fullName>
        <externalId>true</externalId>
        <label>Session Code</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Session_Date__c</fullName>
        <label>Session Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Session_Format__c</fullName>
        <label>Session Format</label>
        <picklist>
            <picklistValues>
                <fullName>Presentation with customer(s)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hands-on training</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Panel with customers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Presentation without customer(s)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Demo with customer(s)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Panel and Demo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Keynote</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partner Session</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Session_Notes__c</fullName>
        <label>Session Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Session_Rating__c</fullName>
        <inlineHelpText>Enter session evaluation score (1-5, with 5 as the highest) - if applicable</inlineHelpText>
        <label>Session Rating</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Session_Slot__c</fullName>
        <label>Session Slot Number</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Session_Status__c</fullName>
        <label>Session Status</label>
        <picklist>
            <picklistValues>
                <fullName>Abstract - Submitted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Abstract - Copy Edited</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Abstract - Finalized</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Creative Brief - Submitted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Draft Slides - Submitted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Slides - Submitted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dry Run - Scheduled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dry Run - Complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Slides - Locked</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Session cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Creative Brief - Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ready to Publish</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Session_Theme__c</fullName>
        <label>Session Theme</label>
        <picklist>
            <picklistValues>
                <fullName>Theme 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Theme 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Theme 3</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Session_Time__c</fullName>
        <label>Session Time</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Slides_URL__c</fullName>
        <label>Slides URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Sponsor__c</fullName>
        <label>Sponsor</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sponsored__c</fullName>
        <label>Sponsored?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Track__c</fullName>
        <label>Track</label>
        <referenceTo>Track__c</referenceTo>
        <relationshipLabel>Sessions</relationshipLabel>
        <relationshipName>Sessions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>of_Survey_Responses__c</fullName>
        <label># of Survey Responses</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Session</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Session Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sessions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>